products model and observers and migration ... completed
