# resources/views/emails/product_created.blade.php
@@ -1,0 +1,4 @@
+<p>A new product has been created:</p>
+<p>Name: {{ $product->name }}</p>
+<p>Price: {{ $product->price }}</p>
+<p>Quantity: {{ $product->quantity }}</p>
