# routes/api.php
@@ -1,8 +1,14 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\ProductController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('auth/register', [AuthController::class, 'register']);
 Route::post('auth/login', [AuthController::class, 'login']);
 Route::get('auth/logout', [AuthController::class, 'logout']);
+
+Route::apiResource('products', ProductController::class)->only([
+    'index',
+    'store',
+]);
